[gd_scene load_steps=11 format=2]

[ext_resource path="res://resources/fonts/ariblk.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://resources/textures/Download.png" type="Texture" id=2]
[ext_resource path="res://scripts/Settings.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=5]
size = 20
outline_size = 1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.679688, 0.679688, 0.679688, 1 )

[sub_resource type="StyleBoxFlat" id=2]
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.368627, 0.368627, 0.368627, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.207843, 0.207843, 0.207843, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
expand_margin_left = 2.0
expand_margin_right = 2.0
expand_margin_top = 2.0
expand_margin_bottom = 2.0

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.74902, 0.74902, 0.74902, 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.012
anchor_top = 0.022
anchor_right = 0.987
anchor_bottom = 0.989
margin_left = 0.639999
margin_top = 0.16
margin_right = 0.640015
margin_bottom = -0.0800171
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1248.0
margin_bottom = 696.0

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 1248.0
margin_bottom = 665.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
margin_right = 1248.0
margin_bottom = 665.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TitleCenter" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 1248.0
margin_bottom = 30.0
size_flags_horizontal = 3

[node name="TitleLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/TitleCenter"]
margin_left = 552.0
margin_right = 696.0
margin_bottom = 30.0
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 5 )
text = "Hello User! :)"

[node name="InfoLabel" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 34.0
margin_right = 1248.0
margin_bottom = 265.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
text = "BlockyOS currently doesn't have any settings to retune. Sorry about that. But! It does have some info you need to know!

Currently, the OS doesn't support an app downloader. Hopefully it can in the future but for now that's something hard to work on. What you can do is go to [filepath here] and put apps into that folder. If you wanna create apps for the OS, I will have a guide sometime soon for it. Supported app files are .pck files and hopefully in the future, I'll make it so you have some apps built-in. You will need to use Godot 3.5.1 or newer to make apps for it. Godot 4 is not going to be supported.

Thanks for installing! :)
-- Blockyheadman"
align = 1
autowrap = true

[node name="MainContainer" type="CenterContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 269.0
margin_right = 1248.0
margin_bottom = 305.0
size_flags_horizontal = 3

[node name="Setting1" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer"]
margin_left = 464.0
margin_right = 783.0
margin_bottom = 36.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer/Setting1"]
margin_right = 319.0
margin_bottom = 36.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer/Setting1/HBoxContainer"]
margin_top = 6.0
margin_right = 118.0
margin_bottom = 29.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Setting Label"

[node name="Button" type="Button" parent="MarginContainer/VBoxContainer/ScrollContainer/VBoxContainer/MainContainer/Setting1/HBoxContainer"]
margin_left = 122.0
margin_right = 319.0
margin_bottom = 36.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 4 )
custom_styles/normal = SubResource( 3 )
text = "Setting to Change"
icon = ExtResource( 2 )

[node name="DescriptionLabel" type="Label" parent="MarginContainer/VBoxContainer"]
margin_top = 669.0
margin_right = 1248.0
margin_bottom = 696.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "BlockyOS Version 1.0.0 | Blockyheadman
Powered Pridefully by Godot Game Engine"
align = 1
autowrap = true
